--- a/20220406/Readme
+++ b/20220406/Readme
@@ -9,5 +9,5 @@
 5. git 설치https://gitforwindows.org/
 6. git 허브 계정생성
 7. 깃허브 새로운 래파지토리(디렉토리) 생성
-8. [vscode git과 연결하기]windows(https://www.youtube.com/watch?v=qkRuIUSdXnw)
+8. [vscode git과 연동(연결)하기]windows(https://www.youtube.com/watch?v=qkRuIUSdXnw)
 9. 39p index.html 작성 후 git허브에 새로 생성한 래파지토리에 파일 올리기
