--- a/20220406/Readme
+++ b/20220406/Readme
@@ -6,7 +6,7 @@
 2. python 설치
 3. cmder 설치
 4. vscode 설치 or 파이참 설치
-5. git 설치 : https://gitforwindows.org/
+5. git 설치 : https://gitforwindows.org/ , http://git-scm.com/download/win
 6. git 한국어 설명 : https://git-scm.com/book/ko/v2
 6. git 허브 계정생성
 7. 깃허브 새로운 래파지토리(디렉토리) 생성
