--- a/20220406/Readme
+++ b/20220406/Readme
@@ -5,7 +5,7 @@
 1. anaconda 설치
 2. python 설치
 3. cmder 설치
-4. vscode 설치 or 파이참 설치
+4. vscode 설치 : https://code.visualstudio.com/download 파이참 설치 : https://www.jetbrains.com/ko-kr/pycharm/download/#section=windows
 5. git 설치 : https://gitforwindows.org/ , http://git-scm.com/download/win
 6. git 한국어 설명 : https://git-scm.com/book/ko/v2
 7. git 허브 계정생성
