--- a/20220406/Readme
+++ b/20220406/Readme
@@ -1,6 +1,7 @@
 장고 배우는 첫날!
 [노션페이지] : https://www.notion.so/django-e38df54c5036439e995e491f7dc8df8e
 [장고+부트스트랩 파이썬 웹개발의 정석] : https://image.yes24.com/goods/96541859/XL
+<img src="https://cdn.inflearn.com/public/files/courses/327264/17da6aff-4bc3-41dc-b7a3-15c4103b0b04/123.png"  width="500" height="370">
 
 1. anaconda 설치
 2. python 설치
