--- a/20220406/Readme
+++ b/20220406/Readme
@@ -13,3 +13,21 @@
 8. 깃허브 새로운 래파지토리(디렉토리) 생성
 9. [vscode git과 연동(연결)하기]windows : https://www.youtube.com/watch?v=qkRuIUSdXnw
 10. 39p index.html 작성 후 git허브에 새로 생성한 래파지토리에 파일 올리기
+
+강의 동영상 시청 및 실습
+- 파이썬 설치
+- CMDer 설치
+- VS Code 설치하기
+- PyCharm 설치하기
+
+
+
+장고 배우는 둘째날!
+
+강의 동영상 시청 및 실습
+
+- HTML 기초
+- HTML 스타일 입히기
+- CSS 
+- JS(자바스크립트) 기초
+  - 덧셈 기능 추가
