--- a/20220406/Readme
+++ b/20220406/Readme
@@ -1,4 +1,4 @@
-장고 배우는 첫날!
+1. 장고 배우는 첫날!
 [노션페이지] : https://www.notion.so/django-e38df54c5036439e995e491f7dc8df8e
 [장고+부트스트랩 파이썬 웹개발의 정석] : https://image.yes24.com/goods/96541859/XL
 
@@ -22,7 +22,7 @@
 
 
 
-장고 배우는 둘째날!
+2. 장고 배우는 둘째날!
 
 강의 동영상 시청 및 실습
 
@@ -31,3 +31,11 @@
 - CSS 
 - JS(자바스크립트) 기초
   - 덧셈 기능 추가
+- cmder로 git버전관리
+  - git 파일 업데이트
+
+
+3. 장고 배우는 셋째날!
+- 
+4. 장고 배우는 넷째날!
+- 
