--- a/20220406/Readme
+++ b/20220406/Readme
@@ -31,11 +31,18 @@
 - CSS 
 - JS(자바스크립트) 기초
   - 덧셈 기능 추가
+- js 파일로 관리하기
 - cmder로 git버전관리
   - git 파일 업데이트
 
-
 3. 장고 배우는 셋째날!
-- 
+- 부트스트랩 설치
+- 네비게이션바
+- Container
+- Grid
+- spacing
+
 4. 장고 배우는 넷째날!
-- 
+- 인프런 강의 결제
+- 블로그 리스트 페이지 만들기
+- Card & Footer
